[feat] 工作内容 && 分享刷新 && 老用户转化
