# internal/router/job.go
@@ -24,6 +24,7 @@ func InitJobRouter(deps RouterDeps, r *gin.RouterGroup) {
 		strictAuthRouter.POST("/jobs/create", deps.JobHandler.Create)
 		strictAuthRouter.POST("/jobs/update", deps.JobHandler.Update)
 		strictAuthRouter.POST("/jobs/refresh", deps.JobHandler.Refresh)
+		strictAuthRouter.POST("/jobs/refresh/share", deps.JobHandler.ShareRefresh)
 		strictAuthRouter.POST("/jobs/refresh/pay", deps.JobHandler.RefreshPay)
 		strictAuthRouter.POST("/jobs/close", deps.JobHandler.Close)
 		strictAuthRouter.POST("/jobs/reopen", deps.JobHandler.Reopen)
